# FX-speculate

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LOCAL_SETUP.md  README.md  config.py  docker-compose.yml  pyproject.toml  usd_jpy_model_v5.ipynb  米ドルFxモデル構築_v_5.ipynb  米ドルFxモデル構築_v_6.ipynb
.claude/: ralph-loop.local.md  settings.local.json
Probabilistic-Market-Sensor/docs/: PMS-DATA-INGEST-USDJPY-v5.0.md  PMS-FEATURE-DICT-USDJPY-v5.0.md  PMS-REQ-USDJPY-v5.0-WBS.md  PMS-REQ-USDJPY-v5.0.md
Probabilistic-Market-Sensor/scripts/: evaluate_baselines.py  fetch_gmo_fx_klines.py  ingest_usdjpy.py  split_data.py
Probabilistic-Market-Sensor/tests/: test_baselines.py  test_evaluation.py  test_features.py  test_imputation.py  test_labels.py  test_splitting.py  test_validation.py
Temporal Fusion Transformer/: CLAUDE.md  OPTIMIZATION_PROMPT.md  README.md  TFT_USDJPY予測AI_設計書.md  config.py  data.py  evaluate.py  evaluate_tft.py  model.py  train.py  train_ensemble.py  train_tft.py
Temporal Fusion Transformer/.claude/: ralph-loop.local.md
Temporal Fusion Transformer/dashboard/: app.py  backtest_cache.json  database.py  predictor.py  tft_dashboard.db
dashboard/: app.py
data/: dataset.py  events.py  features.py  fetch.py
data/evaluation/: baseline_evaluation_report.json  baseline_evaluation_report.md
data/splits/: ohlcv_usdjpy_1m_test_20251028_20260126.manifest.json  (+2 more)
docs/ralph-prompts/: catboost.md  (+2 more)
model/: adaptive_threshold.py  confidence.py  loss.py  trainer.py
notebooks/: usd_jpy_catboost.ipynb  usd_jpy_lightgbm.ipynb  usd_jpy_model_v5.ipynb  usd_jpy_model_v6.ipynb  usd_jpy_transformer.ipynb
ralph-loop/: ARCHITECTURE.md  CLAUDE.md  train.py
scripts/: data_loader.py  evaluate.py  evaluation.py  features.py  predict.py  run_daily.bat  schedule_task.bat  train.py  update_data.py
tests/: conftest.py  test_adaptive_threshold.py  test_confidence.py  test_data_loader.py  test_dataset.py  test_evaluation.py  test_events.py  test_features.py  test_fetch.py  test_integration.py  test_loss.py  test_predict.py  test_trainer.py
(+32 files in other folders)
