[project]
name = "fx-speculate"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "pandas>=2.0,<3.0",
  "numpy>=1.26,<2.0",
  "matplotlib",
  "seaborn",
  "ta",
  "optuna",
  "shap",
  "catboost",
  "lightgbm",
  "xgboost",
  "scikit-learn",
  "pyarrow",
  "fastparquet",
  "numba>=0.58",
  "requests",
  "jupyterlab",
  "ipykernel",
  "pytest",
  "torch>=2.6,<3.0",
  "papermill>=2.7.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
